Fixed datetimpicker on mobile devices and added readonly Added a ton more vertification on date input Fixed sorting in the booking scheduling

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -23,6 +23,11 @@ Table Of Index
 13. Footer css
 14. Media Quries css
 ------------------------------------------*/
+
+.date input.invalid {
+    border: 2px solid red !important; 
+}
+
 #paypal_btn {
     margin: 10px 5px 0 5px;
     color: white;
